# Sistema-de-ventas

./: .env.example  .env.production  AZURE_DEPLOY.md  CHECKLIST.md  CODE_CLEANUP_REPORT.md  FACTURACION_PDF_GUIA.md  FACTURACION_RESUMEN.md  FIREBASE_SETUP.md  GUIA_RAPIDA_FACTURACION.md  MAINTENANCE.md  MONITORING_SUPPORT.md  PRE_COMMIT_CHECKLIST.md  PRIMEROS_PASOS_FACTURACION.md  PRIVACY_POLICY.md  QUICK_START.md  README.md  README_FACTURACION.md  READY_TO_SELL.md  SECURITY_ANALYSIS.md  SETUP.md  STRIPE_SETUP.md  TERMS_OF_SERVICE.md  TESTING.md  backup.bat  backup.sh  docker-compose.yml  install.bat  install.sh  package-lock.json
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  email-service.js  package-lock.json  package.json  server.js  stripe-service.js
frontend/: .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsc-diagnostics.txt  tsc-output.txt  unused-tsc-report.txt  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src/contexts/: AuthContext.tsx  SidebarContext.tsx  ThemeContext.tsx
frontend/src/routes/: AppRoutes.tsx  PrivateRoute.tsx
frontend/src/services/: ajusteService.ts  api.ts  authService.ts  categoriaService.ts  clienteService.ts  cloudinaryService.ts  devolucionService.ts  facturaPdfService.ts  firebase.ts  firebaseAuthService.ts  firebaseStorageService.ts  firestoreRealtime.ts  inventarioService.ts  localImageService.ts  marcaService.ts  notificationService.ts  productoService.ts  searchService.ts  (+2 more)
(+61 files in other folders)
