[package]
name = "task-core-sales"
version = "0.1.0"
description = "Aplicación de escritorio para Task Core Sales"
authors = ["Tu equipo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[package.metadata.tauri]
features = ["custom-protocol"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
