[package]
name = "sistema-ventas"
version = "0.1.0"
description = "Aplicación de escritorio para Sistema Ventas"
authors = ["Tu equipo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }
image = "0.24"

[package.metadata.tauri]
features = ["custom-protocol"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
